fix navbar hide on scroll on mobile

--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,10 @@ body {
     top: 0 !important;
   }
 
+  .navbar.hide {
+    transform: translateY(-100%) !important;
+  }
+
   body {
     padding-top: 64px !important;
   }
